update for display

--- a/day-7/index.html
+++ b/day-7/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="teste"></div>
         <div id="header" class="box">
             <div class="header">
                 <header>
@@ -21,18 +22,18 @@
         
         <div id="main" class="box">
             <div class="main">
-                <main>
-                    <section>
+                <main id="main">
+                    <section >
                         <h1>Digital College</h1>
                         <div class="sublinha"></div>                        
                     </section>
-                    <section>
-                        <p class="p-main">
+                    <section class="text-main">
+                        <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores illo aliquam quod est, dolor, iure optio adipisci id perferendis fugiat qui voluptatum at.   Adipisci accusantium     at repellendus consectetur dolor sed!
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro exercitationem, voluptatibus consectetur voluptatem earum perferendis unde sint nulla et debitis deserunt doloribus quam at saepe illo. Neque minus suscipit laudantium?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus facilis eaque illum consequuntur? Consequuntur magnam ipsam ratione consectetur iure tempora pariatur eveniet. Minima officiis inventore harum eveniet ducimus et quasi!Lorem
                         </p>
                     </section>
-                    <div class="equipe">
+                    <div id="equipe" class="equipe">
                         <section>
                             <h1>Equipe</h1>
                             <div class="sublinha"></div>
@@ -68,10 +69,10 @@
 
 
         
-        <div id="footer" class="box">
+        <div id="footer">
             <div class="footer">
                 <footer>
-                    <section>
+                    <section class="text-footer">
                         <p>Todos os Direitos Reservados</p>
                     </section>
                 </footer>
