--- a/day-7/index.html
+++ b/day-7/index.html
@@ -24,7 +24,7 @@
             <div class="main">
                 <main id="main">
                     <section >
-                        <h1>Digital College</h1>
+                        <h1 id="titulo">Digital College</h1>
                         <div class="sublinha"></div>                        
                     </section>
                     <section class="text-main">
