updade-index.html+use-function-document

--- a/day-9-projectJS/index.html
+++ b/day-9-projectJS/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <section>
-            <h1 id="mensagem"></h1>
+            <h1 id="mensagem">Eu sou uma mensagem!</h1>
         </section>
     </header>
     <main>
@@ -21,7 +21,7 @@
     </footer>
 
 
-    <script src="./indes.jsn">
+    <script src="./index.js">
 
     </script>
 </body>
