conclusion-search-delete-tasks

--- a/mini-project-js/index.html
+++ b/mini-project-js/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <input type="text" id="search" placeholder="Serach on title">
+        <input type="text" id="search" onkeyup="checkTask()" placeholder="Serach on title">
     </header>
     <main>
         <section id="tasks">
